dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

AM_INIT_AUTOMAKE(irclib, 1a)

AC_PATH_PROG(LIBTOOLIZE, libtoolize, $PATH:/usr/pkg/bin:/usr/local/bin:/usr/share/libtool)
AC_PATH_PROG(LIBTOOL, libtool, $PATH:/usr/pkg/bin:/usr/local/bin:/usr/share/libtool)

[

$LIBTOOLIZE --automake
if [ ! -r libtool ] ; then
    mv libtool libtool.$$
    ln -s $LIBTOOL ./libtool
fi

if [ "$srcdir" = "." ] ; then
    top_srcdir="`pwd`/${top_srcdir}/"
    srcdir="`pwd`/${srcdir}/"
    export top_srcdir srcdir
fi

]

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h strings.h sys/ioctl.h sys/types.h sys/socket.h sys/time.h sys/queue.h syslog.h queue.h unistd.h values.h)
AC_CHECK_HEADER(event.h, AC_DEFINE(HAVE_EVENT_H), AC_MSG_ERROR([This library requires libevent. See INSTALL for more information.]))
AC_CHECK_HEADER(adns.h, AC_DEFINE(HAVE_ADNS_H), AC_MSG_ERROR([This library requires adns. See INSTALL for more information.]))
AC_CHECK_LIB(adns, adns_submit,, AC_MSG_ERROR([This library requires adns. See INSTALL for more information.]))
AC_CHECK_LIB(event, event_init,, AC_MSG_ERROR([This library requires libevent. See INSTALL for more information.]))


dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_TYPE_SIGNAL
AC_FUNC_STRFTIME
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname gettimeofday select socket strdup strerror)

AC_OUTPUT(Makefile)

